--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="#27AAE1"
     android:layout_width="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:alpha="0.3"
+        android:scaleType="fitXY"
+        android:rotation="180"
+        android:src="@drawable/lay_back"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="429dp"
+            android:background="@drawable/signup_frame"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="40dp">
@@ -36,9 +39,10 @@
                 android:layout_marginBottom="20dp"
                 android:hint="Password"/>
             <Button
-                android:layout_width="100dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="loginClick"
+                android:text="Login"
                 android:layout_marginBottom="10dp"/>
 
 
