--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,20 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.3"
+        android:scaleType="fitXY"
+        android:rotation="180"
+        android:src="@drawable/lay_back"/>
+
+    <ImageView
         android:id="@+id/iv_mic"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_gravity="top|center"
         android:layout_marginTop="180dp"
-        android:src="@drawable/ic_launcher_background"/>
+        android:src="@drawable/mic"/>
 
 
     <LinearLayout
@@ -20,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="100dp"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
 
@@ -29,7 +38,7 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:padding="10dp"
-            app:cardElevation="15dp"
+            app:cardElevation="10dp"
             app:cardCornerRadius="10dp"
             android:onClick="crippleCareClick"
             android:layout_weight="1">
@@ -40,12 +49,14 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="67dp"
+                    android:layout_height="66dp"
+                    android:src="@drawable/cripple" />
                 <TextView
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
                     android:text="Cripple Care"/>
 
             </LinearLayout>
@@ -56,7 +67,7 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:padding="10dp"
-            app:cardElevation="15dp"
+            app:cardElevation="10dp"
             app:cardCornerRadius="10dp"
             android:onClick="familyProtectorClick"
             android:layout_weight="1">
@@ -64,15 +75,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="67dp"
+                    android:layout_height="66dp"
+                    android:src="@drawable/family_icon" />
                 <TextView
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
                     android:text="Family protector"/>
 
             </LinearLayout>
