--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,19 +2,23 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#27AAE1">
+    android:layout_height="match_parent">
+
 
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:alpha="0.3"
+        android:scaleType="fitXY"
+        android:rotation="180"
+        android:src="@drawable/lay_back"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="429dp"
         android:layout_gravity="center"
+        android:background="@drawable/signup_frame"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="40dp">
